	* Swedish translation updated by Daniel Eriksson
	* Eliminated flicker when positioning line, polygon side, or gradient in Windows version
	* Scrolling made more smooth in Windows version
	* Dock area now holds settings toolbar and layers dialog when their windows are closed
	* Main toolbar and tools toolbar now rearrange themselves to fit in window
	* The preview button on the colour selectors is now a toggle to enable interactive previews
	* Gaussian blur effect now faster by 20-35%
	* "Protect details" toggle added to Kuwahara-Nagao blur
	* Gaussian blur, Unsharp mask and Difference of Gaussians effects now use multithreading to utilize all available CPU cores
	* Moving the pointer with the arrow keys now scrolls the canvas when moving beyond the viewport
	* Dragging selection frame in canvas window, layer in view window, or colour in palette window, beyond the viewport now scrolls the window
	* sRGB colour scale generation added to palette editor
	* sRGB gradients added
	* Line tool now uses stroke gradient when no gradient placement exists
	* "Palette->Pick Gradient" approximates an A->B gradient using colours from current palette (see handbook section 3.3.9)
	* New palette sort mode added - Brightness
	* "Image->Segment" added : See handbook section 6.10 for details
	* Colour chooser popup added - press 'E' to open
	* Posterize function in Transform Colour window now has 3 types - Bitwise, Truncated, Rounded
	* Toggle to transform RGB clipboard image added to Transform Colour window
	* The Convert To Indexed window now remembers the previous settings in that mtPaint session
	* Text pasting tools now support multiline text (use Ctrl+Enter to insert line breaks)
	* Animated GIF and multipage TIFF files now can be loaded into layers (one frame/page per layer)
	* GIF animation file exploding is now done internally in mtPaint, not Gifsicle
	* "Explode Frames" can now save frames in any suitable supported file format